[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ab_glyph = "0.2.26"
image = "0.25.1"
imageproc = "0.25.0"
num-complex = "0.4.6"
rand = "0.8.5"
worker = "0.0.18"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
